<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mobile_gradient_backgrounds_2"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/txtTituloApp"
        android:layout_width="382dp"
        android:layout_height="57dp"
        android:layout_margin="2sp"
        android:background="#B9FFFFFF"
        android:text="@string/txt_label_main"
        android:textAlignment="center"
        android:textColor="#E655565A"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.032" />

    <EditText
        android:id="@+id/txtPrimeiroNome"
        android:layout_width="294dp"
        android:layout_height="63dp"
        android:layout_marginTop="56dp"
        android:autofillHints="Nome"
        android:backgroundTint="#831212"
        android:ems="10"
        android:hint="@string/txt_nome_main"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloApp" />

    <EditText
        android:id="@+id/txtTelefone"
        android:layout_width="294dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Editar"
        android:ems="10"
        android:hint="@string/txt_tel_main"
        android:inputType="phone"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCurso" />

    <EditText
        android:id="@+id/txtCurso"
        android:layout_width="294dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Curso"
        android:ems="10"
        android:hint="@string/txt_curso_main"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSobrenone" />

    <EditText
        android:id="@+id/txtSobrenone"
        android:layout_width="294dp"
        android:layout_height="63dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Sobrenome"
        android:ems="10"
        android:hint="@string/txt_sobrenome_main"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPrimeiroNome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="48dp"
        android:background="#2979FF"
        android:text="@string/txt_btnSalvar_main"
        android:textAlignment="center"
        android:textColor="#070B27"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toEndOf="@+id/btnLimpar"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone"
        app:layout_constraintVertical_bias="0.693" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLimpar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="48dp"
        android:background="#FF8A80"
        android:text="@string/txt_btnLimpar_main"
        android:textAlignment="center"
        android:textColor="#F5350101"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnFinalizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone"
        app:layout_constraintVertical_bias="0.693" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFinalizar"
        android:layout_width="297dp"
        android:layout_height="55dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="44dp"
        android:background="#1DE9B6"
        android:text="@string/txt_btnFinalizar_main"
        android:textAlignment="center"
        android:textColor="#021B08"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>